# cipher-diary

./: Cargo.toml  README.md
data/: example.journal
src/: cli.rs  config.rs  encryptor.rs  errors.rs  main.rs  summary.rs
templates/: summaries.tmpl
tests/: test_encryption.rs  test_summary.rs
